fixed weird overflow on mobile
changed grid to flex

--- a/style.css
+++ b/style.css
@@ -27,9 +27,10 @@ body {
     position:relative;
 }
 
+/* originally i had these set as grid and that somehow made the width fixed when the browser was narrow */
 body, .container {
-    display: grid;
-    grid-template-columns: 1fr;
+    display:flex;
+    flex-flow: row wrap;
     justify-content: center;
     justify-items: center;
 }
@@ -41,6 +42,8 @@ body, .container {
 
 section {
     width:100%;
+    margin:0;
+    padding:0;
 }
 
 
@@ -53,7 +56,7 @@ a {
 }
 
 a:visited {
-    color:blueviolet
+    color:blueviolet;
 }
 
 .cap {
@@ -69,7 +72,7 @@ a:visited {
     margin:0 4em;
 }
 
-ul {
+ul, li {
     padding:0;
     margin:0;
 }
@@ -117,7 +120,7 @@ underline {
     margin-bottom: 1em;
 }
 
-.row1:first-child {
+.row1:first-child, .inverse {
     color: lavender;
     background: black;
 }
@@ -184,17 +187,10 @@ underline {
     body {
         padding: .5em;
     }
+
+    /* Ensure single column layout on small screens */
     .row2 {
-            display: grid;
-            grid-template-columns: 1fr;
-            row-gap:1em;
-        }
-    .row3 {
         grid-template-columns: 1fr;
-        /* Ensure single column layout on small screens */
-            row-gap:1em;
-    }
-    .indent {
-        margin: 0 0em;
+        row-gap:1em;
     }
 }
